--- a/public/assets/css/bootstrap-extra.css
+++ b/public/assets/css/bootstrap-extra.css
@@ -82,11 +82,8 @@ label {
   font-weight: normal;
 }
 
-.control-label {
-	/*float: left;*/
-	/*width: 160px;*/
-	/*padding-top: 5px;*/
-	/*text-align: right;*/
+.panel-heading {
+	cursor: pointer;
 }
 
 .bg-primary {
